[refactor] 영화, 영화관, 좌석 조회 servicee 변경